--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ button:hover{
 #resumeOutput{
     background-image: url("https://img.freepik.com/free-vector/simple-green-gradient-background-vector-business_53876-168091.jpg");
     background-size: 640px;
-     width: 600px;
+     max-width: 600px;
     margin: auto ;
     padding: 20px;
     border: 1px solid #11c370;
@@ -114,9 +114,8 @@ display: flex;
 
 /* footer section */
 footer{
-    /* background:skyblue; */
+
     color:black;
-    /* padding: 3px 10px; */
     text-align: center;
     margin-top: 23px;
     margin-bottom: 0px;
